# trends.bar

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose-dev.yaml
.github/: FUNDING.yml
.github/workflows/: dockerimage.yml
deploy/docker-compose/: docker-compose.yml
projects/main/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
projects/main/native/: .gitignore  CMakeLists.txt
projects/main/public/: editor.js  index.html
projects/main/src/: App.css  App.js  DBConfig.js  HostEnv.js
projects/trends.bar/: .env.development  Dockerfile  package-lock.json  package.json
projects/trends.bar-graphql-api/: Dockerfile  apolloServer.js  coronaquery.json  db.js  httpserver.js  index.js  logger.js  package-lock.json  package.json
projects/trends.bar-graphql-api/assistants/: country-assistant.js  cruncher-assistant.js  dataSet.js  dataset-assistant.js  graph-assistant.js  parser-assistant.js  regex-assistant.js
projects/trends.bar-graphql-api/graphql/: dataSources.js  typeDefs.js
projects/trends.bar-graphql-api/models/: crawlingScript.js  dataSource.js  dataset-model.js  dataset.js  graph_layout-model.js  models.js  trend-model.js  trend.js  trendGraph.js  trendLayout.js
projects/trends.bar-graphql-api/restful-api/: fetchRoute.js
projects/trends.bar-graphql-api/routes/: crawlerRoute.js
projects/trends.bar-graphql-api/utils/: utils.js
projects/trends.bar/local/: hopkins-parser.json  whoparser.json
projects/trends.bar/native/: importer_valspar.h  main.cpp
projects/trends.bar/public/: index.html  (+1 more)
(+210 files in other folders)
